--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -8,12 +8,12 @@
   
   header{
     width: 100%;
-    background-color: var(--dark-blue);
-    color: #fff;
+    background-color: darkblue;
+    color:white;
   
     .header{
       width: 100%;
-      height: 8rem;
+      height: 3rem;
       max-width: 1000px;
       margin: 0 auto;
       padding: 1rem;
@@ -154,18 +154,18 @@
         .header-right {
           display: block;
           .cart {
-            // display: block;
-            // padding: 5px 0;
+            display: block;
+            padding: 5px 0;
             border-bottom: 1px solid #333;
-            // a {
-            //   position: relative;
-            //   p {
-            //     position: absolute;
-            //     top: -1rem;
-            //     left: 5rem;
-            //     font-weight: 500;
-            //   }
-            // }
+            a {
+              position: relative;
+              p {
+                position: absolute;
+               top: -1rem;
+               left: 5rem;
+                font-weight: 500;
+              }
+            }
           }
   
           .links {
@@ -182,7 +182,7 @@
       .cart {
         display: block;
         padding: 5px 0;
-        // border-bottom: 1px solid #333;
+        border-bottom: 1px solid #333;
         a {
           color: #fff;
           position: relative;
